Fix vertical alignment form input

--- a/_ltu-patterns/packages/form/src/scss/_form.scss
+++ b/_ltu-patterns/packages/form/src/scss/_form.scss
@@ -136,7 +136,7 @@ legend {
         border: 2px solid $color-3b;
         border-radius: 2px;
         left: 0px;
-        top: 3px;
+        // top: 3px;
     }
 
     &--invalid {
